--- a/css/html.css
+++ b/css/html.css
@@ -5,10 +5,15 @@
 }
 
 html {
+	font-family: 'Ubuntu', sans-serif;
 }
 
 body {
 	min-height: 100vh;
 	width: 100%;
 	border: 5px dashed red;
+}
+
+h1 {
+	font-family: 'ABeeZee', sans-serif;
 }
