--- a/css/html.css
+++ b/css/html.css
@@ -1,3 +1,7 @@
+:root {
+	color: rgb(47, 79, 79);
+}
+
 * {
 	margin: 0;
 	padding: 0;
@@ -12,6 +16,8 @@ body {
 	min-height: 100vh;
 	width: 100%;
 	border: 5px dashed red;
+	overflow: hidden;
+	background-color: rgb(255, 250, 205);
 }
 
 h1 {
